# iac-ai-assistant

./: .env.example  .gitignore  ADVANCED_FEATURES_SUMMARY.md  CLAUDE.md  COMPREHENSIVE_TEST_REPORT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  EXECUTIVE_ACHIEVEMENT_REPORT.md  GETTING_STARTED.md  GITOPS_SETUP.md  LICENSE  PROJECT_ORGANIZATION_REPORT.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup_test.py  test_cli.sh  validate_system.py
.claude/agents/: DocLeadKnowledgeManager.md  ProjectManager.md  QAEngineerSecuritySpecialist.md  SWEAutomation.md  VersionControlandConfigurationManager.md
.github/workflows/: drift-monitoring.yml  gitops-deployment.yml  local-ai-ci.yml
config/: config.yaml
config/gitops/: credentials.py  workflow.yaml
config/secrets/: .gitkeep
development/project-management/: agent-coordination-matrix.md
development/tasks/: cleanup-todo.md
docs/: AGENT_DEVELOPMENT_CONCEPT.md  COMMAND_CHEATSHEET.md  DEVELOPMENT_AGENTS.md  DOCUMENTATION_SUMMARY.md  INDEX.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  USER_JOURNEY_GUIDE.md  activity.md  cli-reference.md  requirements.md
docs/api/: api-reference.md  authentication-guide.md
docs/architecture/: overview.md  technical-architecture.md
docs/deployment/: DEPLOYMENT_COMPLETE.md
docs/knowledge-base/: search-system.md
docs/operations/: installation.md
docs/project-management/: DOCUMENTATION_COMPLETE.md  master-plan.md  security-requirements-spec.md
docs/security/: LOCAL_AI_TEST_REPORT.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SECURITY_TEST_REPORT.md  assessment.md  local-ai-privacy.md
docs/setup/: GITOPS_SETUP.md  WORKFLOW_SETUP.md
docs/training/: getting-started-workshop.md  security-masterclass.md
docs/troubleshooting/: ai-models.md  common-issues.md  hardware.md
docs/user-guides/: beginner.md  expert.md  intermediate.md
scripts/: DEBUG_STARTUP_FIXES.md  init_secrets.py  sanitize_ips.sh  setup_gitops.py  start-assistant.sh
src/: config_manager.py  template_manager.py
tasks/: todo.md
tests/: __init__.py  test_ai_core_functionality.py  test_ai_fix_simple.py  test_ai_functionality.py  test_ai_validation_simplified.py  test_comprehensive_ai_validation.py  test_enhanced_ai.py  test_local_ai_functionality.py  test_local_ai_security.py
tools/: test_cli.sh
workflows_to_add/: gitops-deployment.yml
(+69 files in other folders)
